fixed chicken time and speed of showing, fixed menu z-index

--- a/game/main.css
+++ b/game/main.css
@@ -310,6 +310,7 @@ input {
 
     .pauseButton {
         font-size: 1.2rem;
+        height: 100px;
     }
 
     .pauseButton input {
